# inference

./: .gitignore  AST.hs  ChangeLog.md  CompressedJSON.hs  Context.hs  DCore.hs  Evaluable.hs  Helpers.hs  InferenceError.hs  LICENSE.md  Main.hs  Name.hs  PSType.hs  PrettyJSON.hs  README.md  Supply.hs  Temp.hs  Types.hs  Utils.hs  default.nix  infer.cabal
PureScript/: Types.hs
nix/: hrecursion-schemes.nix
src/Language/: Infer.hs
src/Language/Infer/: Utils.hs
