name:                  infer
version:               0.1.0.0
synopsis:              Dependent types with worlds
license:               MIT
license-file:          LICENSE
author:                Kyle McKean, Remy Goldschmidt
maintainer:            mckean.kylej@gmail.com
category:              Language
build-type:            Simple
extra-source-files:    CHANGELOG.md
cabal-version:         >= 1.10

library
  exposed-modules:     Language.Infer
  other-modules:       Language.Infer.Utils
  build-depends:       base               == 4.*
                     , text               == 1.2.*
                     , text-show          == 3.4.*
                     , ansi-wl-pprint     == 0.6.*
                     , hrecursion-schemes == 0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
