name:                infer
version:             0.1.0.0
synopsis:            Dependent types with worlds
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Infer
  build-depends:       base >=4.9 && <4.10
                     , text == 1.2.*
                     , text-show == 3.4.*
                     , hrecursion-schemes == 0.1.*
                     , containers == 0.5.*
                     , mtl == 2.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
